# tfm_opt

./: .gitignore  README.md  conda-requirements.txt  conda-requirements.yml  flake.nix  lock.json  pyproject.toml
adjoint_tests/: backward_dae_augmented.py  backward_euler_ode.py  backward_euler_ode_augmented.py  forward_euler_ode.py  forward_euler_ode_augmented.py
c_petsc/: adjoint  example_adjoint3.c
dae/: petsc4py_diffussion_solve.py
dae/adjoint_tests/: backward_euler_ode_augmented.py
dae/solve_dae_with_variables/: with_petsc  with_petsc4py.py  with_python.py
dae/solve_simple_dae/: with_scikit.py
data/equipment_costs/: .~lock.gensets.csv#  gensets.csv  heat_pumps.csv  heat_pumps.ods  lifepo4_batteries.csv  lifepo4_batteries.ods  water_tanks.csv  (+1 more)
figures/: ks.py  smooth_step_sigmoid.py  tank_temperatures_ode.py
presentation/: Makefile  presentation.html  presentation.md
redaccion/: .gitignore  Makefile  PORTADA_Trabajo_Fin_de_Master.docx  PORTADA_Trabajo_Fin_de_Master_original.docx  main.aux  main.bbl  main.bcf  main.blg  main.lot  main.out  main.tex  main.toc  references.bib
solve_dae_with_variables/: Makefile  simple_ode_with_python.py  with_petsc.c  with_python.py
solve_simple_dae/: with_petsc.py
src/: battery.py  battery_cant_sell.py  battery_different_efficiencies.py  battery_dk.py  battery_free_size.py  battery_refactor.py  battery_scaled.py  battery_sparse_gradients.py  battery_sparse_gradients_with_stored_energy.py  custom_types.py  heat_pump_fixed_efficiency.py  opt.py  parameters.py  utils.py
tests/: barnes.py  prueba.py  rosenbrock.py
(+110 files in other folders)
